changed weekly brief/detailed switch to <a> element to test whether this fixes the issue on iPhone SE

--- a/src/style.css
+++ b/src/style.css
@@ -232,6 +232,7 @@ a :hover,
   cursor: pointer;
   font-size: larger;
   opacity: 80%;
+  color: unset;
 }
 
 h1,
